syntax = "proto3";

package rpc;

service Raft {
 rpc Vote(VoteRequest) returns (VoteResponse) {}
 rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message VoteRequest {
    int32 Term = 1;
    int32 RaftServerId = 2;
    int32 LastLogIndex = 3;
    int32 LastLogTerm = 4;
}

message VoteResponse {
    int32 NewTerm = 1;
    bool VoteGranted = 2;
}

message AppendEntriesRequest {
    int32 Term = 1;
    int32 LeaderId = 2;
    int32 PrevLogIndex = 3;
    int32 PrevLogTerm = 4;
    int32 LeaderCommitIndex = 6;
    map<int32, string> Entries = 7;
}

message AppendEntriesResponse {
    int32 Term = 1;
    bool Success = 2;
}

